# tt-ntt

./: CMakeLists.txt  build.sh
src/: CMakeLists.txt
src/include/: generator.hpp
src/ntt-naive/: CMakeLists.txt  ntt_naive.cpp
